# mekaDoseSigma

./: CMakeLists.txt  DESIGN.md  sdkconfig  sdkconfig.defaults
.cursor/rules/: mekadose-sigma.mdc
docs/: JET_SETUP.md
main/: CMakeLists.txt  idf_component.yml  main.cpp
main/game/: ability.cpp  ability.hpp  air_strike.cpp  air_strike.hpp  companion_drone.cpp  companion_drone.hpp  digits.cpp  digits.hpp  enemy.cpp  enemy.hpp  enemy_manager.cpp  enemy_manager.hpp  environment.cpp  environment.hpp  font.cpp  font.hpp  game.cpp  game.hpp  game_ui.cpp  game_ui.hpp  high_scores.cpp  high_scores.hpp  input.cpp  input.hpp  map_config.hpp  mech.cpp  mech.hpp  mech_catalog.cpp  mech_catalog.hpp  mech_config.hpp  mech_layout_macros.hpp  mech_layout_sigma_hover.hpp  mech_layout_striker_hover.hpp  mech_layout_striker_mk1.hpp  mech_loadout.cpp  mech_loadout.hpp  mech_rig.cpp  mech_rig.hpp  menu_showcase.cpp  menu_showcase.hpp  (+31 more)
