idf_component_register(
    SRCS "main.cpp"
          "game/game.cpp"
          "game/world.cpp"
          "game/environment.cpp"
          "game/terrain.cpp"
          "game/worldgen.cpp"
          "game/obstacles.cpp"
          "game/input.cpp"
          "game/rng.cpp"
          "game/mech.cpp"
          "game/mech_catalog.cpp"
          "game/mech_loadout.cpp"
          "game/mech_rig.cpp"
          "game/ability.cpp"
          "game/enemy.cpp"
          "game/enemy_manager.cpp"
          "game/objective.cpp"
          "game/objective_hud.cpp"
          "game/portal.cpp"
          "game/world_tier.cpp"
          "game/projectile.cpp"
          "game/particles.cpp"
          "game/digits.cpp"
          "game/font.cpp"
          "game/menu_showcase.cpp"
          "game/parallel_scene_render.cpp"
          "game/score.cpp"
          "game/high_scores.cpp"
          "game/run_upgrades.cpp"
          "game/companion_drone.cpp"
          "game/game_ui.cpp"
    INCLUDE_DIRS "."
    REQUIRES driver esp_lcd esp_timer nvs_flash
)
